array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var l = length(num)
  var n = 0
  for (i <-0 to l-1){
    if(num(i+1)<num(i) || num(i+1)<num(i)){
      n = n +1
    }
  }
  return n
}